<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message">Your sole-mate for shoe inventory management awaits.</string>
    <string name="step_right_in">Step right in!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="company_and_name_format">%1$s %2$s</string>
    <string name="shoe_size_format">Size: %1$.1f</string>
    <string name="shoe_list_text">These are your shoes…</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_company">Company</string>
    <string name="dummy_name">Name</string>
    <string name="edit_company_name_hint">Edit the company name here.</string>
    <string name="dummy_description">Description</string>
    <string name="slider_description">This is the slider for the shoe size.</string>
    <string name="save">Save</string>
    <string name="shoe_image_content_description">This is the image of the shoe.</string>
    <string name="shoe_store_image_content_description">An image of a shoe store.</string>
    <string name="shoe_store_inventory">Shoe Store Inventory</string>
    <string name="next">Next</string>
    <string name="empty_shoe_list_image_content_description">Image of an empty shoe list used for instruction of the app.</string>
    <string name="empty_shoe_list_instruction_text">Press on the red plus to add shoes…</string>
    <string name="shoe_details_image_content_description">Image of the shoe details view used for instruction of the app.</string>
    <string name="shoe_list_image_content_description">Image of a shoe list with one shoe used for instruction of the app.</string>
    <string name="add_shoe_button_content_description">Button to add new shoes.</string>
    <string name="shoeImageContentDescription">The image of the shoe.</string>
    <string name="dummy_company_and_name">New Balance 550</string>
    <string name="dummy_shoe_size">Size: 43</string>
    <string name="dummy_long_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu lectus ut leo efficitur scelerisque at vel dolor. Sed risus nunc, porta ac nulla quis, scelerisque lobortis ante. Sed quis laoreet sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum nulla ante, ut dictum tortor luctus vel. Nulla odio mi, rutrum et orci eget, sagittis fermentum ante. Proin in metus sed nisl porttitor convallis. Mauris risus tellus, sodales et lobortis a, convallis eu massa. Sed at aliquam augue, ut vulputate odio. Cras non nunc pulvinar enim ultricies porttitor. Proin tempus quam ullamcorper mi dapibus fringilla.</string>
    <string name="shoe_details_instruction_text">Here you can edit your shoe...</string>
    <string name="shoe_list_instruction_text">Press on the shoe image to see the details of the shoe.</string>

</resources>
