<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.InstructionFragment">

    <!--
    Constraintlayout because it is easier to align the instruction text inside the instruction image
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/wide">

    <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/wide"
            android:layout_marginEnd="@dimen/wide"
            android:layout_marginBottom="@dimen/wide"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/shoeDetailsInstructionImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/wide"
            android:layout_marginTop="@dimen/wide"
            android:layout_marginEnd="@dimen/wide"
            android:layout_marginBottom="@dimen/wide"
            android:src="@drawable/new_balance_detail_view"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/shoe_details_image_content_description" />

        <TextView
            android:id="@+id/shoeDetailsInstructionText"
            style="@style/InstructionTextStyle"
            android:text="@string/shoe_details_instruction_text"
            app:layout_constraintBottom_toBottomOf="@+id/shoeDetailsInstructionImage"
            app:layout_constraintEnd_toEndOf="@+id/shoeDetailsInstructionImage"
            app:layout_constraintStart_toStartOf="@+id/shoeDetailsInstructionImage"
            app:layout_constraintTop_toTopOf="@+id/shoeDetailsInstructionImage"
            app:layout_constraintVertical_bias="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>